@@ -7,16 +7,14 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
-import org.mockito.MockitoAnnotations;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.*;
@@ -27,47 +25,53 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @ExtendWith(MockitoExtension.class)
 class GameTypeControllerTest {
 
+    private GameType createGameType(Long id, String name, int timeControlMinutes) {
+        GameType gameType = new GameType();
+        gameType.setId(id);
+        gameType.setName(name);
+        gameType.setTimeControlMinutes(timeControlMinutes);
+        return gameType;
+    }
+
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
+    @Mock
     private GameTypeService gameTypeService;
 
     @InjectMocks
     private GameTypeController gameTypeController;
 
+    private GameType gameType1;
+    private GameType gameType2;
+
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        // Set up test data
+        gameType1 = createGameType(1L, "Blitz", 5);
+        gameType2 = createGameType(2L, "Rapid", 15);
+
         mockMvc = MockMvcBuilders.standaloneSetup(gameTypeController).build();
     }
 
     @Test
     void getGameTypes_Valid_ReturnListOfGameTypes() throws Exception {
-        GameType gameType1 = new GameType();
-        gameType1.setId(1L);
-        gameType1.setName("Blitz");
-        gameType1.setTimeControlMinutes(5);
-
-        GameType gameType2 = new GameType();
-        gameType2.setId(2L);
-        gameType2.setName("Rapid");
-        gameType2.setTimeControlMinutes(15);
-
-        List<GameType> gameTypes = Arrays.asList(gameType1, gameType2);
+        List<GameType> gameTypes = List.of(gameType1, gameType2);
 
         when(gameTypeService.getGameTypes()).thenReturn(gameTypes);
 
         mockMvc.perform(get("/api/game-type")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].name").value("Blitz"))
-                .andExpect(jsonPath("$[0].timeControlMinutes").value(5))
-                .andExpect(jsonPath("$[1].id").value(2))
-                .andExpect(jsonPath("$[1].name").value("Rapid"))
-                .andExpect(jsonPath("$[1].timeControlMinutes").value(15));
+                .andExpect(jsonPath("$[0].id").value(gameType1.getId()))
+                .andExpect(jsonPath("$[0].name").value(gameType1.getName()))
+                .andExpect(jsonPath("$[0].timeControlMinutes").value(gameType1.getTimeControlMinutes()))
+                .andExpect(jsonPath("$[1].id").value(gameType2.getId()))
+                .andExpect(jsonPath("$[1].name").value(gameType2.getName()))
+                .andExpect(jsonPath("$[1].timeControlMinutes").value(gameType2.getTimeControlMinutes()));
 
         verify(gameTypeService, times(1)).getGameTypes();
     }
+
+
 }
