@@ -1,9 +1,9 @@
 package com.chess.tms.tournament_service.unit.service;
 
+import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -17,7 +17,7 @@ import com.chess.tms.tournament_service.repository.RoundTypeRepository;
 import com.chess.tms.tournament_service.service.RoundTypeService;
 
 @ExtendWith(MockitoExtension.class)
-public class RoundTypeServiceTest {
+class RoundTypeServiceTest {
 
     @Mock
     private RoundTypeRepository roundTypeRepository;
@@ -29,17 +29,20 @@ public class RoundTypeServiceTest {
 
     @BeforeEach
     void setup() {
-        numberOfPlayersChoices = Arrays.asList(2, 4, 8, 16, 32, 64);
+        numberOfPlayersChoices = List.of(2, 4, 8, 16, 32, 64);
     }
 
     @Test
-    void getChoicesForNumberOfPlayers_Valid_ReturnChoices() {
+    void getChoicesForNumberOfPlayers_ReturnsExpectedChoices() {
         when(roundTypeRepository.findDistinctNumberOfPlayers()).thenReturn(numberOfPlayersChoices);
 
         List<Integer> result = roundTypeService.getChoicesForNumberOfPlayers();
 
-        assertEquals(4, result.size());
-        assertEquals(2, result.get(0));
-        assertEquals(16, result.get(3));
+        assertAll("numberOfPlayersChoices",
+            () -> assertEquals(6, result.size(), "Size should match"),
+            () -> assertEquals(2, result.get(0), "First element should be 2"),
+            () -> assertEquals(16, result.get(3), "Fourth element should be 16"),
+            () -> assertEquals(64, result.get(5), "Last element should be 64")
+        );
     }
 }
